k8s/basket-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basket-service
spec:
  type: ClusterIP
  ports:
    - port: 80         
      targetPort: 8080 
  selector:
    app: basket-service
