k8s/basket-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basket-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/basket
            pathType: "Prefix"
            backend:
              service:
                name: basket-service
                port:
                  number: 80
